# doodba

./: .dockerignore  .editorconfig  .env  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc.yml  .travis.yml  11.0.Dockerfile  12.0.Dockerfile  13.0.Dockerfile  14.0.Dockerfile  15.0.Dockerfile  16.0.Dockerfile  17.0.Dockerfile  18.0.Dockerfile  19.0.Dockerfile  8.0.Dockerfile  9.0.Dockerfile  Dockerfile  README.md  TODO.md  common.yaml  devel.yaml  odoo10.test.yml  odoo9.test.yml  prod.yaml  prod.yml  pylock.toml  pyproject.toml  requirements-ci.txt  server.Dockerfile  setup-devel.yaml  src  tasks.py  test.yaml
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml
bin-deprecated/: autoupdate  install.sh  python-odoo-shell  unittest
build.d/: 10-dependencies  10-ssh-key  100-dependencies  100-repos-aggregate  20-repos-aggregate  200-dependencies  250-postgres-client  30-addons-link  300-fontconfig  300-oca-dependencies  40-clean  400-clean  50-compile  50-configure-git-autoshare  500-compile  60-config-generate  70-odoo-install  700-odoo-install  750-geoip-configure  750-geoip-install  750-geoip-permissions  80-permissions  80-requirements-txt  800-permissions  801-sudo-permissions  900-dependencies-cleanup  999-dependencies-cleanup
conf.d/: 00-base.conf  10-addons.conf  20-database.conf  30-proxy-mode.conf  40-smtp.conf  50-demo-data.conf  60-geoip-ge17.conf  60-geoip.conf  60-performance.conf  70-security.conf  80-logging.conf
entrypoint.d/: 00-fix-volume-permissions  20-postgres-wait  30-unaccent-install  35-unaccent-config  40-addons-link  45-geoip  50-config-generate  90-wait-no-host  999-odoo-wait
hooks/: build  post_push  pre_build  pre_push  pre_test  prune  push  test  variables
https/: 503.http  Dockerfile
lib/: installer.py  odoobaselib.py
lib/doodbalib/: __init__.py  installer.py
lib/odoobaselib/: __init__.py  installer.py
migrate.d/: 10-aggregate  20-postgres-wait  40-addons-link  50-config-generate  60-copy
odoo/: .dockerignore  Dockerfile
odoo/custom/dependencies/: pip.txt
odoo/custom/src/: repos.yaml  requirements.txt
odoo/custom/ssh/: config  known_hosts
qa/: insider
tests/: __init__.py  pytest.ini  test_curl  test_for_file
tests/odoo10/: Dockerfile
tests/odoo9/: Dockerfile
tests/scaffoldings/: 8.0.Dockerfile  basic.yaml
(+113 files in other folders)
