[project]
name = "doodba"
version = "0.0.0"
description = "Docker Odoo Base, a highly opinionated image ready to put Odoo inside it, but without Odoo"
authors = [{ name = "Tecnativa" }]
requires-python = "~=3.9"

[dependency-groups]
dev = [
    "plumbum>=1.6.9,<2",
    "pre-commit>=2.9.3,<3",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
