[project]
name = "doodba"
version = "0.0.0"
description = "Docker Odoo Base, a highly opinionated image ready to put Odoo inside it, but without Odoo"
authors = [{ name = "Tecnativa" }]
requires-python = ">=3.9, <4"

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "plumbum>=1.6.9,<2",
    "pre-commit>=4.3.0",
    "pre-commit-uv>=4.1.4",
]

[tool.uv]
package = false
